Fixed UTF-8 encoding in Gradle

--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,9 @@ test {
 application {
     mainClassName = 'Classes.World'
 }
+
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
